Numbers no longer overflow off screen

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: end;
+    overflow: hidden;
     font-size: 18px;
     width: 100%;
     flex: 1;
